--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 ######################## default configuration ####################
-baseURL = "http://makeaconnect.com"
+baseURL = "https://dadpeople.makeaconnect.com"
 title = "Timeframe"
 theme = "timeframe"
 # post pagination
