--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ googleAnalytics = "UA-179587270-2" # example : UA-123-45
 # disqus short name
 disqusShortname = "dadpeople-makeaconnect-com" # get your shortname form here : https://disqus.com
 # disable language
-disableLanguages = [] # desable language from here
+disableLanguages = ['Fr'] # desable language from here
 
 
 ############################# Outputs ##############################
@@ -78,7 +78,7 @@ URL = "/"
 weight = 1
 
 [[menu.footer]]
-#name = "Our Podcast"
+name = "Our Podcast"
 URL = "https://iseedadpeople.com/"
 weight = 3
 
